2011-11-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff: Sync to docs version 1.699.

	* docs/gnuplot.doc term/be.trm term/cairo.trm term/context.trm
	term/win.trm: Fix typos.

2011-11-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/command.c src/eval.c src/gadgets.c src/graphics.c
	src/internal.c src/tables.c src/unset.c src/util.c src/util.h
	term/post.trm:  Fix or remove some FIXMEs.

2011-11-09  Bastian Maerkisch  <bmaerkisch@web.de>

	* doc/gnuplot.doc: New terminal driver epscairo.

	* term/gd.trm: Don't use gd font pointer variables for builtin fonts.

2011-11-08  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/set.c: Use nl_langinfo(CODESET) to find the encoding.
	This hopefully works around non-standard encoding names used by Solaris.

	* src/wxterminal/wxt_gui.cpp: Toggle for "plot ... with circles"

2011-11-08  Bastian Maerkisch  <bmaerkisch@web.de>

	* doc/gnuplot.doc [New features]: Document new cairolatex and
	revised windows terminal.

2010-11-08  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>

	* src/set.c (set_degreesign): Move include of iconv.h to top level.

2011-11-07  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/fig.trm: Update help on font option.

	* term/context.trm: Avoid use of round() because MSVC is still not
	C99-compliant.

	New terminal driver cairolatex, which uses the cairo EPS or PDF
	backend for graphics output and LaTeX text created by functions
	shared with the epslatex and pslatex terminals.

	* term/cairo.term term/post.h term/post.trm term/pslatex.trm: New
	terminal driver cairolatex.
	Patch #3413095

2011-11-06  Mojca Miklavec <mojca.miklavec.lists@gmail.com>

	Add a context terminal, which creates output suitable for ConTeXt.

	* configure.in docs/doc2texi.el docs/gnuplot.doc docs/Makefile.in
	src/makefile.all src/makefile.awc src/term.h term/context.trm:
	New terminal driver context.
	Patches #1654807 and #1503836. Feature Request #2815867.
