@@ -1,3 +1,8 @@
+2011-11-11  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/set.c (set_degreesign):  More attempts to work around oddities in
+	Solaris locale handling.
+
 2011-11-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>
 
 	* docs/gnuplot-ja.doc docs/term-ja.diff: Sync to docs version 1.699.
